--- a/organization-behaviour.html
+++ b/organization-behaviour.html
@@ -77,25 +77,27 @@
     <img src="assets/img/gallery-banner.jpg" alt="">
   </div>-->
 	
-	   <div class="banner-wrap Organization-banner-wrap">
+	  <!--  <div class="banner-wrap Organization-banner-wrap">
       <div class="container">
         <div class="row" style="margin-left: 45%">
           <div class="col-lg-12">
 			  
-        <!--  <div class="quote" style="color: #fff;"> 
+         <div class="quote" style="color: #fff;"> 
              <p style="color: #fff;">
              “Organizations should identify, value and develop <br> high-potential talent.”<br><br>
 
 
           <b>  – Anamitra Chatterjee </b>
             </p>
-          </div> -->
+          </div>
           </div>
           
         </div>
       </div>
-    </div>
-	  
+    </div> -->
+	   <div class="Organization-banner-wrap">
+     <img src="assets/img/Organization-Behaviour-banner-new8.png" alt="">
+  </div>
 	  <section class="video-wrap">
            <div class="container">
 		  <h2>Organization OB HRM OD</h2>
