--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li style="margin:0 8px 0 0; "><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank"><img src="assets/img/icon2.png" alt="" /> Profile Video</a></li>
             </ol>
 		
-      <a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
+      <<a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
 		<div>
 		<audio id="myAudio" src="assets/audio/tagore.mp3"></audio>
 <button id="playBtn" style="color:Red; background: rgb(239,228,111); border-color:black; "><i class="fa-regular fa-circle-play"></i></button>
@@ -431,8 +431,6 @@ Vodacom International</small>
     <script src="assets/js/jquery.fancybox.min.js"></script>
     <script src="assets/js/main.js"></script>
 	<script>
-
-	<script>
 	$(document).ready(function() {
   var audio = $("#myAudio")[0]; // get the audio element
 
@@ -449,7 +447,7 @@ Vodacom International</small>
 });
 	
 	
-	</script>
+	</script> 	  
 </body>
 
 </html>
