--- a/myself.html
+++ b/myself.html
@@ -91,6 +91,7 @@
       </div>
 	  </div>-->
 		
+<!--
 	<div class="banner-wrap leadership-banner-wrap">
       <div class="container">
         <div class="row">
@@ -107,7 +108,10 @@
         </div>
       </div>
     </div>	
-			
+-->
+	<div class="leadership-banner-wrap">
+     <img src="assets/img/leadership-banner.jpg" alt="">
+  </div>		
 		
     <main class="main-wrapper">
 		
