--- a/client-testimonial.html
+++ b/client-testimonial.html
@@ -100,6 +100,15 @@
 				<div class="col-md-2"><img src="assets/img/client/c-labvantage.png" alt=""/></div>
 				<div class="col-md-1">&nbsp;</div>
 			  </div>
+			<div class="row">
+				<div class="col-md-1">&nbsp;</div>
+				<div class="col-md-2"><img src="assets/img/client/c-BT.png" alt=""/></div>			
+				<div class="col-md-2"><img src="assets/img/client/c-minute-mile.png" alt=""/></div>
+				<div class="col-md-2"><img src="assets/img/client/c-shell.png" alt=""/></div>
+				<div class="col-md-2"><img src="assets/img/client/c-uti.png" alt=""/></div>
+				<div class="col-md-2"><img src="assets/img/client/c-vodacom.png" alt=""/></div>
+				<div class="col-md-1">&nbsp;</div>
+			  </div>
 			
 		</div>
 		
