--- a/index.html
+++ b/index.html
@@ -369,6 +369,12 @@ Vodacom International</small>
 					<div class="item"><img src="assets/img/Metso_ Outotec.png" alt="" /></div>
                     <div class="item"><img src="assets/img/DNA.png" alt="" /></div>
                     <div class="item"><img src="assets/img/Insead.png" alt="" /></div>
+					
+					<div class="item"><img src="assets/img/h-BT.jpg" alt="" /></div>
+					<div class="item"><img src="assets/img/h-minute-mile.jpg" alt="" /></div>
+					<div class="item"><img src="assets/img/h-shell.jpg" alt="" /></div>
+                    <div class="item"><img src="assets/img/h-uti.jpg" alt="" /></div>
+                    <div class="item"><img src="assets/img/h-vodacom.jpg" alt="" /></div>
                     
                 </div>
             </div>
