--- a/leadership.html
+++ b/leadership.html
@@ -75,22 +75,8 @@
     </div>-->
 	
 	<div class="banner-wrap myself-ban">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-8">
-           <!-- <div class="quote">
-              <p>
-                “I use my training, accreditation and<br> experience to connect with
-                leaders on the<br> warmth-competency bridge.'' <br /><br />
-
-                <b> – Anamitra Chatterjee</b>
-              </p>
-            </div>-->
-          </div>
-          
-        </div>
-
+		<img src="assets/img/Leadership Development.jpg" alt="">
+     
       </div>
 	  </div>
 	
