--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     He has 12+ years of independent practice in Leadership Development & Executive Coaching. He has coached over 230
                     senior leaders
                     and 2600 hours. As Faculty, he designs and delivers executive education programmes on consulting
-                    skills, organization & leadership development. He has delivered training to over 25 clients and 4000
+                    skills, organizational & leadership development. He has delivered training to over 25 clients and 4000
                     managers.</p>
                 <div class="row">
                     <div class="col-md-7 data-aos" data-aos="fade-right">
@@ -143,7 +143,7 @@ Performance = Potential – (Internal) Interference.”</h2> -->
 						<div class="col-lg-3 col-md-6 data-aos" data-aos="fade-up">
                             <a href="organization-behaviour.html" class="service-box">
                                 <img src="assets/img/icon10.png" alt="" />
-                                <h3>Organization <strong> Behaviour</strong></h3>
+                                <h3>Organizational <strong> Behaviour</strong></h3>
                             </a>
                         </div>
                         <div class="col-lg-3 col-md-6 data-aos" data-aos="fade-up">
@@ -334,7 +334,7 @@ Vodacom International</small>
 				   
 				   <p style="text-align: center; padding:0; display: block;"><a href="publications.html#Pub" style="background:none; border: none; width: auto"><img src="assets/img/banner-publish-img.jpg" alt=""> </a></p>
 				   <p>
-				   Please do reach out to <b style="font-weight:bold;">chatterjee.anamitra@gmail.com</b> for Executive Coaching, Organization and Leadership Development. <br> Thank you in advance.
+				   Please do reach out to <b style="font-weight:bold;">chatterjee.anamitra@gmail.com</b> for Executive Coaching, Organizational and Leadership Development. <br> Thank you in advance.
 				   </p>
 				   
                </div>
