--- a/leadership.html
+++ b/leadership.html
@@ -75,7 +75,7 @@
     </div>-->
 	
 	<div class="banner-wrap myself-ban">
-		<img src="assets/img/Leadership Development.jpg" alt="">
+		<img src="assets/img/Leadership-Development.jpg" alt="">
      
       </div>
 	  </div>
