--- a/leadership.html
+++ b/leadership.html
@@ -75,7 +75,7 @@
     </div>-->
 	
 	<div class="banner-wrap myself-ban">
-		<img src="assets/img/Leadership-Development.jpg" alt="">
+		<img src="assets/img/Leadership Development.jpg" alt="">
      
       </div>
 	  </div>
@@ -97,7 +97,7 @@
         Anamitra Chatterjee, Accredited Executive Coach (EMCC) holds a Master’s degree, MSc Masters in <br>Executive Coaching (AMEC) from Hult Ashridge Centre for Coaching (ACC), UK.<br><br>
 			
 				 “My leadership development and executive coaching practice is informed by own belief in<br>
-Performance = Potential – (Internal) Interference. I coach leaders to develop their own personal leadership style."<br><br>
+Performance = Potential – (Internal) Interference. I coach leaders to develop their own leadership style."<br><br>
 			
 		He underwent the Leadership Development Program (LDP), Center for Creative Leadership (CCL) Brussels.<br>
 Anamitra has 12+ years of work experience in leadership development: INSEAD, Hult Ashridge UK & IIMs in India.<br><br>
@@ -118,7 +118,7 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
     <div class="col-md-6">
 		<p style="padding:0 50px; text-align: left;">
 	
-Anamitra`s practice of Leadership Development (LD) encompasses organisation and human development
+Anamitra`s practice of Leadership Development (LD) encompasses organizational and human development
 across the four quadrants, from individual Leaders to teams and collective entities.
 He fuses his experiential learnings from Executive Coaching and World Class Mentoring to meet the
 needs of business and sports.<br><br> He uses his 12+ years of work experiences across countries
