--- a/leadership.html
+++ b/leadership.html
@@ -118,7 +118,7 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
     <div class="col-md-6">
 		<p style="padding:0 50px; text-align: left;">
 	
-Anamitra`s practice of Leadership Development (LD) encompasses organizational and human development
+Anamitra`s practice of Leadership Development (LD) encompasses organizational development
 across the four quadrants, from individual Leaders to teams and collective entities.
 He fuses his experiential learnings from Executive Coaching and World Class Mentoring to meet the
 needs of business and sports.<br><br> He uses his 12+ years of work experiences across countries
