--- a/leadership.html
+++ b/leadership.html
@@ -74,7 +74,7 @@
       </div>
     </div>-->
 	
-	<div class="banner-wrap myself-ban">
+	<div class="myself-ban">
 		<img src="assets/img/Leadership-Development.jpg" alt="">
      
       </div>
