--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -26,7 +26,7 @@
                         <ul class="sub-menu">
                             <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive Coaching</span ></a></li>
                             <li><a href="executive-education.html"><span style="font-weight: bold">Executive Education</span ></a></li>                            
-							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HRM OD</span ></a></li>
+							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HR OD</span ></a></li>
 							<li><a href="leadership.html"><span style="font-weight: bold">Leadership Development</span ></a></li>
                         </ul>
                     </li>
@@ -160,7 +160,7 @@ engagement is covered in 6-8 EC sessions, of 60-90 mins each including an impact
 development assignments dovetailed between the EC sessions over a 3-4 month period.
 <br><br>
 
-          I also offer executive coaching through an online digital coaching platform (coaching.com).<br><br>
+          I also offer executive coaching through an online digital coaching platform.<br><br>
 
           Anamitra has 12+ years of Leadership Development &amp; Executive Coaching practice. His skills of listening, inquiry,<br>
 		exploration, challenge and support are fundamental to development of leaders and organizational 
@@ -187,14 +187,14 @@ Hogan &amp; LVI360, Belbin, FIRO-B &amp; MBTI.
 		    <li>MD (MBA), of India’s largest steel service Co. in </br/>‘CXO development &amp; top team alignment’</li>
 			
           <li>Country Head (MBA), at Bangalore of a Global<br> Oil & Gas MNC in ‘executive transition’ </li>
-		 <li>VP & Head-HR (MBA), of a French R&D Org in <br/>‘organisation behaviour &amp; transformation’</li>
+		 <li>VP & Head-HR (MBA), of a French R&D Org in <br/>‘organizational behaviour &amp; transformation’</li>
 
 			
 			
 			
          
 
-          <li>CHRO/CPO (MHRM), of a USA/Indian tech Co. in <br/>‘CXO / organization development &amp; change’</li>
+          <li>CHRO/CPO (MHRM), of a USA/Indian tech Co. in <br/>‘CXO / organizational development &amp; change’</li>
 		
 
 		<li>Sr. Director (Engineer), of a Chicago tech-digital firm in <br/>‘behaviour & people connect’</li>
