--- a/executive-education.html
+++ b/executive-education.html
@@ -26,7 +26,7 @@
                         <ul class="sub-menu">
                             <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive Coaching</span ></a></li>
                             <li><a href="executive-education.html"><span style="font-weight: bold">Executive Education</span ></a></li>                            
-							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HRM OD</span ></a></li>
+							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HR OD</span ></a></li>
 							<li><a href="leadership.html"><span style="font-weight: bold">Leadership Development</span ></a></li>
                         </ul>
                     </li>
@@ -167,7 +167,7 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
         <h3>Executive Education & Teaching Interest areas:</h3>
         <ul>
           <li>Leadership Development (LD) & Executive Coaching (EC)</li>
-          <li> Organizational Behaviour (OB) & Human Resource  Management (HRM)</li>
+          <li> Organizational Behaviour (OB) & Human Resource  Management (HR)</li>
 			
             <li>Team Leadership, Resilience & Impactful Communication </li> 
           <li>Organizational Development (OD), Culture & Change Management </li>
