--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <ul class="sub-menu">
                             <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive Coaching</span ></a></li>
                             <li><a href="executive-education.html"><span style="font-weight: bold">Executive Education</span ></a></li>                            
-							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HRM OD</span ></a></li>
+							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HR OD</span ></a></li>
 							<li><a href="leadership.html"><span style="font-weight: bold">Leadership Development</span ></a></li>
                         </ul>
                     </li>
@@ -91,7 +91,7 @@
                                 Coaching</li>
                             <li>Ashridge Executive Education UK, since 2013, Accreditation 2015<br> Adjunct Faculty: 2013-2015. Hult Astridge Education Coach 
                                 </li>
-                            <li>IIM Kozhikode, Adjunct Faculty (OB & HRM), since 2016 <br>
+                            <li>IIM Kozhikode, Adjunct Faculty (OB & HR), since 2016 <br>
 							IIM Kashipur, V. Faculty (Consulting Skills) 2012-18 <br>
 							IIM Calcutta, V. Faculty (Executive Education) since 2013 <br>
 							</li>
@@ -204,7 +204,7 @@ Performance = Potential – (Internal) Interference.”</h2> -->
                 </div>
                 <div class="col-md-5 data-aos" data-aos="fade-left">
                     <h2>Anamitra Chatterjee</h2>
-                    <p><strong>He</strong> lives in Calcutta, India with his family and he has a passion for travelling to mountains.</p>
+                    <p><strong>He</strong> lives in Calcutta, India with his family and has a passion for travelling to mountains.</p>
                     <a href="myself.html">More</a>
                 </div>
             </div>
