--- a/myself.html
+++ b/myself.html
@@ -39,7 +39,7 @@
                         <ul class="sub-menu">
                             <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive Coaching</span ></a></li>
                             <li><a href="executive-education.html"><span style="font-weight: bold">Executive Education</span ></a></li>                            
-							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HRM OD</span ></a></li>
+							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HR OD</span ></a></li>
 							<li><a href="leadership.html"><span style="font-weight: bold">Leadership Development</span ></a></li>
                         </ul>
                     </li>
@@ -127,10 +127,10 @@
                     He has 12+ years of independent practice in Leadership Development & Executive Coaching. He has coached over 230
                     senior leaders
                     and 2600 hours. As Faculty, he designs and delivers executive education programmes on consulting
-                    skills, organization & leadership development. He has delivered training to over 25 clients and 4000
+                    skills, organizational & leadership development. He has delivered training to over 25 clients and 4000
                     managers.</p>
 				
-				 <p class="data-aos" data-aos="fade-up"><strong>Anamitra Chatterjee,</strong> holds two post-graduate qualifications: PGDM (MBA)
+				 <p class="data-aos" data-aos="fade-up"><strong>Anamitra Chatterjee,</strong> holds two post-graduate qualifications: MBA (PGDM) 
                         from Indian Institute of Management (IIM) Calcutta & <br>PGD from London School of Economics
                         & Political Science (LSE) and a Master's degree, MSc Masters in Executive Coaching
                         (AMEC) from <br>Hult Ashridge UK. He studied on a British Chevening scholarship at LSE,
@@ -231,7 +231,7 @@
                 </li>
 				  <li>
 				     Distinction: First Class First, BSc Economics (Hons) Part-I,  <br> 
-				     &nbsp; &nbsp; &nbsp;Presidency College Calcutta Univ: 1988
+				     &nbsp; &nbsp; &nbsp;Presidency College Calcutta University: 1988
 				</li>
               
               </ul>
