--- a/organization-behaviour.html
+++ b/organization-behaviour.html
@@ -40,7 +40,7 @@
                        <ul class="sub-menu">
                             <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive Coaching</span ></a></li>
                             <li><a href="executive-education.html"><span style="font-weight: bold">Executive Education</span ></a></li>                            
-							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HRM OD</span ></a></li>
+							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HR OD</span ></a></li>
 							<li><a href="leadership.html"><span style="font-weight: bold">Leadership Development</span ></a></li>
                         </ul>
                     </li>
@@ -100,11 +100,11 @@
   </div>
 	  <section class="video-wrap">
            <div class="container">
-		  <h2>Organization OB HRM OD</h2>
+		  <h2>Organization OB HR OD</h2>
 			   
 			   Anamitra Chatterjee has had diverse education and work experience of 25+ years in India & UK across<br>
 Deutsche Bank and PwC, Hult Ashridge UK and IIMs in India. As Faculty, he designs and delivers executive
-education<br> programmes on organizational behaviour OB HRM, OD and leadership development.<br /><br />
+education<br> programmes on organizational behaviour OB HR, OD and leadership development.<br /><br />
 			  
 			  Anamitra Chatterjee, Accredited Executive Coach (EMCC) holds a Master’s degree, MSc Masters in <br>Executive
 Coaching (AMEC) from Hult Ashridge Centre for Coaching (ACC), UK.<br /><br />
