--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
           <!--  <h2 class="data-aos" data-aos="fade-right">“My leadership development and executive coaching<br>
  practice is informed by my own belief in<br>
 Performance = Potential – (Internal) Interference.”</h2> -->
-            <img src="assets/img/service-img.jpg" class="img-fluid" alt="" />
+<!--            <img src="assets/img/service-img.jpg" class="img-fluid" alt="" />-->
+			<img src="assets/img/leadership-banner3.jpg" class="img-fluid" alt="" />
             <div class="service-option">
                 <div class="container">
                     <div class="row" >
