--- a/leadership.html
+++ b/leadership.html
@@ -123,7 +123,7 @@ Anamitra`s practice of Leadership Development (LD) encompasses organizational de
 across the four quadrants, from individual Leaders to teams and collective entities.
 He fuses his experiential learnings from Executive Coaching and World Class Mentoring to meet the
 needs of business and sports.<br><br> He uses his 12+ years of work experiences across countries
-to develop in Leaders of the future:<br> mountain Sherpa like connect lead competencies:<br> Manage Anxiety.
+to develop in Leaders of the future:<br> mountain Sherpa like connect-lead competencies:<br> Manage Anxiety.
 			Arouse Hope. Take Postive Action.
 			</p>
 	</div>
