--- a/index - Copy.html
+++ b/index - Copy.html
@@ -41,10 +41,9 @@
 			        <li><a href="#contact-block">Contact</a></li>
                 </ul>
         </nav>
-            <ol>
+         <ol>
                 <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
-                <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank">Profile</a></li>
-			    <li><a href="#coach-section" class="btn-color1" target="_blank">New</a></li>
+                <li style="margin:0 8px 0 0; "><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank"><img src="assets/img/icon2.png" alt="" /> Profile Video</a></li>
             </ol>
 		
       <a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
@@ -319,9 +318,9 @@ Vodacom International</small>
                 </div>-->
             </div>
 		</section>
-        <section class="video-wrap" >
-           <div class="container" >
-               <div class="video-box data-aos" data-aos="fade-up" id="coach-section" >
+        <section class="video-wrap">
+           <div class="container">
+               <div class="video-box data-aos" data-aos="fade-up" id="video">
                    <h2> Executive Coaching Award</h2>
                    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Fkvj73lXI9A"
                        title="YouTube video player" frameborder="0"
