--- a/executive-education.html
+++ b/executive-education.html
@@ -43,9 +43,10 @@
                 </ul>
 					
         </nav>
-         <ol>
-               <li><a href="assets/img/AnamitraChatterjee-Bio-13Feb.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
-                <li style="margin:0 8px 0 0; "><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank"><img src="assets/img/icon2.png" alt="" /> Profile Video</a></li>
+            <ol>
+                <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
+                <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank">Profile</a></li>
+			    <li><a href="index.html#coach-section" class="btn-color1" >New</a></li>
             </ol>
       <a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
 	<div>
