--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ol>
                 <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
                 <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank">Profile</a></li>
-			    <li><a href="#coach-section" class="btn-color1" target="_blank">New</a></li>
+			    <li><a href="#coach-section" class="btn-color1">New</a></li>
             </ol>
 		
       <a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
@@ -246,14 +246,6 @@ Performance = Potential – (Internal) Interference.”</h2> -->
 		
 		
 		
-		
-		
-		
-		
-		
-		
-		
-		
 		 <section class="testimonial-wrap" id="talk" >
 			  <div class="container">
                 <h2 class="data-aos" data-aos="fade-up">Testimonials</h2>
@@ -334,7 +326,7 @@ Vodacom International</small>
 -->
 				   
 				   
-				   <p style="text-align: center; padding:0; display: block;"><a href="publications.html#Pub" style="background:none; border: none; width: auto"><img src="assets/img/banner-publish-img.jpg" alt=""> </a></p>
+				   <p style="text-align: center; padding:0; display: block;" id="coach-section-in"><a href="publications.html#Pub" style="background:none; border: none; width: auto"><img src="assets/img/banner-publish-img.jpg" alt=""> </a></p>
 				   <p>
 				   Please do reach out to <b style="font-weight:bold;">chatterjee.anamitra@gmail.com</b> for Executive Coaching, Organizational and Leadership Development. <br> Thank you in advance.
 				   </p>
