--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </nav>
             <ol>
                 <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
-                <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank">Profile</a></li>
-			    <li><a href="#coach-section" class="btn-color1">New</a></li>
+                <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank" ><img src="assets/img/icon2.png" alt="" style="padding-right: 5px;" />Profile</a></li>
+			    <li><a href="#coach-section" class="btn-color1">Updates</a></li>
             </ol>
 		
       <a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
