--- a/myself.html
+++ b/myself.html
@@ -234,6 +234,10 @@
 				     Distinction: First Class First, BSc Economics (Hons) Part-I,  <br> 
 				     &nbsp; &nbsp; &nbsp;Presidency College Calcutta University: 1988
 				</li>
+				   <li>
+				    Featured in ‘Leading Coaches Navigating the Corporate World’ <br> 
+					&nbsp; &nbsp; &nbsp;CEO Weekly Edinburgh UK: 2024
+				</li>
               
               </ul>
             </div>					  
