--- a/myself.html
+++ b/myself.html
@@ -150,7 +150,7 @@
           <div class="row">
             <div class="col-lg-3">
               <div class="cv-img">
-                <img src="assets/img/img-2.png" alt="" />
+                <img src="assets/img/img-2.jpg" alt="" />
               </div>
             </div>
             <div class="col-lg-9">
