--- a/leadership.html
+++ b/leadership.html
@@ -226,7 +226,7 @@ I offer LD through a hybrid-online mode.
 <section class="video-wrap">
            <div class="container">
 			   <div class="video-box data-aos" data-aos="fade-up" style="margin: 80px 0;" >
-                   <h2> Executive Coaching Recognition</h2>
+                   <h2> Global Recognition </h2>
 		   
 				   
 				   <p style="text-align: center; padding:0; display: block;" id="coach-section-in"><a href="publications.html#Pub" style="background:none; border: none; width: auto"><img src="assets/img/Recognition.jpg" alt=""> </a></p>
