--- a/organization-behaviour.html
+++ b/organization-behaviour.html
@@ -34,9 +34,9 @@
       <nav class="navigation">
         <a href="javascript:void(0)" class="close-menu"><i class="far fa-times-circle"></i></a>
         <ul>
-                     <li class="current">
+			<li class="current">
                         <a href="#">Services</a>
-                       <ul class="sub-menu">
+                        <ul class="sub-menu">
                             <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive Coaching</span ></a></li>
                             <li><a href="executive-education.html"><span style="font-weight: bold">Executive Education</span ></a></li>                            
 							<li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization OB HR OD</span ></a></li>
@@ -49,8 +49,7 @@
 					<ul class="sub-menu">
                             <li><a href="gallery.html">Photos</a></li>
                             <li><a href="video-gallery.html">Videos</a></li>
-                            <li><a href="publications.html">Publications</a></li>
-							
+                            <li><a href="publications.html">Publications</a></li>							
                         </ul>
 			
 					</li>
@@ -59,9 +58,10 @@
         </nav>
             <ol>
                 <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
-                <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank" ><img src="assets/img/icon2.png" alt="" style="padding-right: 5px;" />Profile</a></li>
-			    <li><a href="index.html#coach-section" class="btn-color1">Updates</a></li>
+                <li><a href="https://www.youtube.com/watch?v=LoOr5RHpujc" target="_blank" ><img src="assets/img/icon2.png" alt="" style="padding-right: 5px;" />Profile</a></li>
+			    <li><a href="#coach-section2" class="btn-color1">Updates</a></li>
             </ol>
+		
       <a href="javascript:void(0)" class="open-menu"><i class="fas fa-bars"></i></a>
 		<div>
 		<audio id="myAudio" src="assets/audio/tagore.mp3"></audio>
@@ -71,8 +71,8 @@
 		</div>
 		
     </div>
+		 
   </header>
-      
   <!--<div class="coaching-banner-wrap">
     <img src="assets/img/gallery-banner.jpg" alt="">
   </div>-->
