--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
             <ol>
                 <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
-                <li><a href="https://youtu.be/qVULcHNeX7c?si=dIB5-XDAWqKFh4lC" target="_blank" ><img src="assets/img/icon2.png" alt="" style="padding-right: 5px;" />Profile</a></li>
+                <li><a href="https://www.youtube.com/watch?v=LoOr5RHpujc" target="_blank" ><img src="assets/img/icon2.png" alt="" style="padding-right: 5px;" />Profile</a></li>
 			    <li><a href="#coach-section2" class="btn-color1">Updates</a></li>
             </ol>
 		
