--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -46,7 +46,7 @@
         </nav>
             <ol>
                 <li><a href="assets/img/AnamitraChatterjee-CV.pdf" target="_blank"><img src="assets/img/icon1.png" alt="" /> Bio CV</a></li>
-                <li><a href="https://www.youtube.com/watch?v=LoOr5RHpujc" target="_blank" ><img src="assets/img/icon2.png" alt="" style="padding-right: 5px;" />Profile</a></li>
+                <li><a href="https://www.youtube.com/watch?v=LoOr5RHpujc" target="_blank" style="border-color:#000; background-color:#efe46f; color:#000;" ><img src="assets/img/icon2-black.png" alt="" style="padding-right: 5px;" />Video</a></li>
 			    <li><a href="#coach-section2" class="btn-color1">Updates</a></li>
             </ol>
 		
