--- a/executive-education.html
+++ b/executive-education.html
@@ -101,11 +101,11 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
               <li>Indian Institute of Management (IIM) Kozhikode: <span class="nor-txt">Adjunct Faculty since 2022</span><br />
                 <strong>Courses Taught:</strong>
 				  <p>
-				  1. Organizational Behaviour (OB-II)<br/>
-                    &nbsp;&nbsp; 1.5 Credit. 15 hours. Courseware & Evaluation: 2023, 2024<br/>
+				  1. Organizational Behaviour (OB-I, Micro OB)<br/>
+                    &nbsp;&nbsp; 1.5 Credit. 15 hours. Courseware & Evaluation: 2024<br/>
 					  
-			      2. Organizational Behaviour (OB I)
-					  <br> &nbsp;&nbsp;  1.5 Credit. 15 hours. Courseware & Evaluation: 2024<br/>
+			      2. Organizational Theory & Design (OB II, Macro OB)
+					  <br> &nbsp;&nbsp;  1.5 Credit. 15 hours. Courseware & Evaluation: 2018, 2023, 2024<br/>
                   
 					  3. Organizational Development & Change (OD&C)
 					  <br> &nbsp;&nbsp;  2 Credit. 20 hours. Courseware & Evaluation: 2022
@@ -170,7 +170,7 @@ of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs
         <h3>Executive Education & Teaching Interest areas:</h3>
         <ul>
           <li>Leadership Development (LD) & Executive Coaching (EC)</li>
-          <li> Organizational Behaviour (OB) & Human Resource  Management (HR)</li>
+          <li> Organizational Behaviour (OB), Organizational Theory & Design</li>
 			
             <li>Team Leadership, Resilience & Impactful Communication </li> 
           <li>Organizational Development (OD), Culture & Change Management </li>
