--- a/myself.html
+++ b/myself.html
@@ -285,7 +285,7 @@
             <div class="txt-block">
              <div class="publication"><h3>Alumni & Trade Associations</h3></div>
               <ul>
-				  <li>IIM Calcutta Alumni Association IIMC AA, Secretary 2019-24, Executive Committee 2017</li>
+				  <li>IIM Calcutta Alumni Association IIMC AA, Vice Chairman 2024, Secretary 2019-24</li>
                 <li>
                     Indo British Scholars’ Association IBSA, Chair-Education 2024, LSE Alumni Excom 2014
                   
