--- a/leadership.html
+++ b/leadership.html
@@ -27,20 +27,6 @@
         </button>
         <div class="collapse navbar-collapse navigation" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="current">
-              <a href="#">Services</a>
-              <ul class="sub-menu">
-                <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive
-                      Coaching</span></a></li>
-                <li><a href="executive-education.html"><span style="font-weight: bold">Executive
-                      Education</span></a></li>
-                <li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization
-                      OB HR
-                      OD</span></a></li>
-                <li><a href="leadership.html"><span style="font-weight: bold">Leadership
-                      Development</span></a></li>
-              </ul>
-            </li>
             <li><a href="myself.html">Anamitra</a></li>
             <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
             <li><a href="#">Gallery</a>
@@ -61,7 +47,21 @@
           <li><a href="https://www.youtube.com/watch?v=LoOr5RHpujc" target="_blank"
               style="border-color:#000; background-color:#efe46f; color:#000;"><img src="assets/img/icon2-black.png"
                 alt="" style="padding-right: 5px;" />Video</a></li>
-          <li><a href="#coach-section2" class="btn-color1">Updates</a></li>
+          <li>
+            <div class="dropdown custom-dropdown">
+              <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Services
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="executive-coaching.html">Executive Coaching</a></li>
+                <li><a class="dropdown-item" href="executive-education.html">Executive Education</a>
+                </li>
+                <li><a class="dropdown-item" href="organization-behaviour.html">Organization OB HR
+                    OD</a></li>
+                <li><a class="dropdown-item" href="leadership.html">Leadership Development</a></li>
+              </ul>
+            </div>
+          </li>
         </ol>
 
         <div class="play-buttons">
@@ -140,24 +140,37 @@
         </p>
         <div class="leadership-block2">
           <div class="row leader-mar">
-            <div class="col-md-6">
+            <div class="col-lg-6">
               <p style="padding:0 50px; text-align: left;">
+
 
                 Anamitra`s practice of Leadership Development (LD) encompasses organizational development
                 across the four quadrants, from individual Leaders to teams and collective entities.
                 He fuses his experiential learnings from Executive Coaching and World Class Mentoring to meet the
-                needs of business and sports.<br><br> He uses his 12+ years of work experiences across countries
+                needs of business and sports.<br><br></p>
+              <p style="padding:0 50px; text-align: left;">He uses his 12+ years of work experiences across
+                countries
                 to develop in Leaders of the future:<br> mountain Sherpa like connect-lead competencies:<br> Manage
                 Anxiety.
                 Arouse Hope. Take Postive Action.
               </p>
             </div>
-            <div class="col-md-6">&nbsp;</div>
+            <div class="col-lg-6">
+              <div class="leader-image-block">
+                <h4>Leadership Development</h4>
+                <p><img src="assets/img/leader-developement1.png" class="img-fluid"></p>
+              </div>
+            </div>
 
           </div>
           <div class="row leader-mar" style="margin-top:10px; ">
-            <div class="col-md-6">&nbsp;</div>
-            <div class="col-md-6">
+            <div class="col-lg-6 order-2 order-lg-0">
+              <div class="leader-image-block">
+                <h4>Leadership Assessment</h4>
+                <p><img src="assets/img/development-assessment-2.png" class="img-fluid"></p>
+              </div>
+            </div>
+            <div class="col-lg-6">
               <p style="padding:0 30px; text-align: left;">
                 <span style="font-weight:bold"> Leaders of the future will be different from that of the
                   past.</span><br><br>
