--- a/gallery.html
+++ b/gallery.html
@@ -28,20 +28,6 @@
         </button>
         <div class="collapse navbar-collapse navigation" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="current">
-              <a href="#">Services</a>
-              <ul class="sub-menu">
-                <li><a href="executive-coaching.html"><span style="font-weight: bold">Executive
-                      Coaching</span></a></li>
-                <li><a href="executive-education.html"><span style="font-weight: bold">Executive
-                      Education</span></a></li>
-                <li><a href="organization-behaviour.html"><span style="font-weight: bold">Organization
-                      OB HR
-                      OD</span></a></li>
-                <li><a href="leadership.html"><span style="font-weight: bold">Leadership
-                      Development</span></a></li>
-              </ul>
-            </li>
             <li><a href="myself.html">Anamitra</a></li>
             <li><a href="client-testimonial.html">Clients & Testimonials</a></li>
             <li><a href="#">Gallery</a>
@@ -62,7 +48,21 @@
           <li><a href="https://www.youtube.com/watch?v=LoOr5RHpujc" target="_blank"
               style="border-color:#000; background-color:#efe46f; color:#000;"><img src="assets/img/icon2-black.png"
                 alt="" style="padding-right: 5px;" />Video</a></li>
-          <li><a href="#coach-section2" class="btn-color1">Updates</a></li>
+          <li>
+            <div class="dropdown custom-dropdown">
+              <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Services
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="executive-coaching.html">Executive Coaching</a></li>
+                <li><a class="dropdown-item" href="executive-education.html">Executive Education</a>
+                </li>
+                <li><a class="dropdown-item" href="organization-behaviour.html">Organization OB HR
+                    OD</a></li>
+                <li><a class="dropdown-item" href="leadership.html">Leadership Development</a></li>
+              </ul>
+            </div>
+          </li>
         </ol>
 
         <div class="play-buttons">
