--- a/leadership.html
+++ b/leadership.html
@@ -150,9 +150,8 @@
                 needs of business and sports.<br><br></p>
               <p style="padding:0 50px; text-align: left;">He uses his 12+ years of work experiences across
                 countries
-                to develop in Leaders of the future:<br> mountain Sherpa like connect-lead competencies:<br> Manage
-                Anxiety.
-                Arouse Hope. Take Postive Action.
+                to develop in Leaders of the future:<br>mountain Sherpa like connect-lead competencies:<br> Manage
+                Anxiety. <span style="color:#494848;font-weight:600;"> Arouse Hope. Take Postive Action.</span>
               </p>
             </div>
             <div class="col-lg-6">
