--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -149,23 +149,23 @@ client leads to a co-created relationship." <br /><br />
         <div class="row">
           <div class="col-lg-7">
             <p style="text-align:left">
-              Anamitra uses an unique <b style="font-style:normal">SLICER</b> approach to executive coaching i.e. <br><b
+              Anamitra uses a unique <b style="font-style:normal">SLICER</b> approach to executive coaching i.e. <br><b
                 style="font-style:normal">S</b>upport, <b style="font-style:normal">L</b>istening, (shared) <b
                 style="font-style:normal">I</b>nquiry, <b style="font-style:normal">C</b>hallenge, <b
                 style="font-style:normal">E</b>xplore & <b style="font-style:normal">R</b>eflection.<br><br></p>
 
-
-            <p style="text-align:left">This picture predicts that there is a correlation between one’s interest in a
+            <p style="text-align:left">Anamitra's preffered approach: For me the MBTI typology dominant function points
+              towards ‘person-focused’
+              coaching approach in depth, while the CBQ vector points more towards ‘solution-focused’ coaching approach
+              over time.<br><br></p>
+			  
+			   <p style="text-align:left">This picture predicts that there is a correlation between one’s interest in a
               particular coaching
               approach, score on the 6 Heron ‘categories of intervention’ (Heron’s book Helping the Client) and one’s
               dominant function according to Myers-Briggs, MBTI. In each quadrant, I have written what general approach
               to coaching fits rather well with the styles and dimensions and also written one of the dominant functions
               of the MBTI typology, in red.<br><br></p>
-
-            <p style="text-align:left">Anamitra's preferered approach: For me the MBTI typology dominant function points
-              towards ‘person-focused’
-              coaching approach in depth, while the CBQ vector points more towards ‘solution-focused’ coaching approach
-              over time.<br><br><br><br></p>
+			  
           </div>
           <div class="col-lg-5">
             <img class="img-fluid img-space" src="assets/img/Anamitra-Executive-Coaching-SLICE-Style.png" alt="">
@@ -260,7 +260,7 @@ client leads to a co-created relationship." <br /><br />
   <section class="video-wrap">
     <div class="container">
 
-      <div class="video-box data-aos" data-aos="fade-up" style="padding:80px 0">
+      <div class="video-box data-aos" data-aos="fade-up" style="padding:00px 0">
         <h2> Executive Coaching Award</h2>
 
         <p style="text-align: center; padding:0; display: block;" id="coach-section-in"><a href="publications.html#Pub"
