--- a/myself.html
+++ b/myself.html
@@ -124,17 +124,15 @@
 
     <section class="about-wrap">
       <div class="container">
-
-        <p <strong>Anamitra Chatterjee,</strong> Accredited Executive Coach & Faculty has had education and
+		<h2 class="data-aos" data-aos="fade-up">Anamitra Chatterjee</h2>
+        <p <strong>Anamitra Chatterjee,</strong> Accredited Executive Coach (EMCC) & Faculty has had education and
           experience<br>
           of 25+ years in India & UK across Deutsche Bank and PwC, Hult Ashridge UK & IIMs in India.
         </p>
         <p class="data-aos" data-aos="fade-up">
           Anamitra Chatterjee is an Accredited Executive Coach (EMCC).
           He has 12+ years of independent practice in Leadership Development & Executive Coaching. He has coached over
-          230
-          senior leaders
-          and 2600 hours. As Faculty, he designs and delivers executive education programmes on consulting
+          230 senior leaders and 2600 hours. As Faculty, he designs and delivers executive education programmes on consulting
           skills, organizational & leadership development. He has delivered training to over 25 clients and 4000
           managers.</p>
 
