--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -154,7 +154,7 @@ client leads to a co-created relationship." <br /><br />
                 style="font-style:normal">I</b>nquiry, <b style="font-style:normal">C</b>hallenge, <b
                 style="font-style:normal">E</b>xplore & <b style="font-style:normal">R</b>eflection.<br><br></p>
 
-            <p style="text-align:left">Anamitra's preffered approach: For me the MBTI typology dominant function points
+            <p style="text-align:left">Anamitra's preferred approach: For me the MBTI typology dominant function points
               towards ‘person-focused’
               coaching approach in depth, while the CBQ vector points more towards ‘solution-focused’ coaching approach
               over time.<br><br></p>
