--- a/organization-behaviour.html
+++ b/organization-behaviour.html
@@ -142,6 +142,7 @@
 -->
 
       <div class="row">
+		  <h3> OB OD Video & Webinar </h3>
         <div class="col-lg-6">
           <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/h3zfsrOe77g"
@@ -176,8 +177,7 @@
         an updated view of organizational design and development that is engaging for executive education students and
         clients.<br /><br /></p>
 
-      <div class="row">
-
+      <div class="row">		
         <div class="col-lg-3">&nbsp; </div>
         <div class="col-lg-6">
           <div class="video-container">
@@ -202,22 +202,10 @@
 
           Please do reach out to <b>chatterjee.anamitra@gmail.com</b> for Executive Education, Organizational and
           Leadership Development. <br> Thank you in advance.
-
-
         </p>
-
       </div>
 
-
   </section>
-
-
-
-
-
-
-
-
 
   <footer class="footer-wrapper" id="contact-block">
     <div class="sitemap">
